title text-align fix; screen media for portfolio

--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -4,9 +4,3 @@
   // 114%
   color: var(--title-color);
 }
-
-@media screen and (max-width: 767px) {
-  .title {
-    text-align: center;
-  }
-}
