--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -24,6 +24,12 @@
   // 171%
 }
 
+@media screen and (max-width: 767px) {
+  .features__title {
+    text-align: center;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .features__list {
     display: flex;
