--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,32 +1,41 @@
 .portfolio {
   font-size: 16px;
-  line-height: 1.88;
+  line-height: (30px / 16px);
+  // 187%
 }
 
 .filter {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
+  margin-bottom: 40px;
+
+  margin-top: -15px;
+  margin-left: -8px;
 }
 
-.filter__item:not(:last-child) {
-  margin-right: 8px;
+.filter__item {
+  margin-top: 15px;
+  margin-left: 8px;
 }
 
 .filter__button {
+  padding: 6px 22px;
+
   font-family: inherit;
   font-weight: 500;
   font-size: inherit;
-  line-height: 1.6;
+  line-height: (26px / 16px);
+  //162%
   letter-spacing: inherit;
   text-align: center;
+
   color: var(--title-color);
   background-color: var(--secondary-background);
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  padding: 6px 22px;
 
   transition: color var(--trans-duration) var(--timing-function),
     background-color var(--trans-duration) var(--timing-function),
@@ -42,17 +51,8 @@
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.project-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-
 .project__item {
-  margin-top: 30px;
-  margin-left: 30px;
-  flex-basis: calc((100% - 90px) / 3);
+  margin-bottom: 30px;
 }
 
 .project__link {
@@ -77,13 +77,17 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  height: 100%;
-  width: 100%;
   overflow: auto;
   padding: 63px 24px;
+
+  height: 100%;
+  width: 100%;
+
   font-size: 18px;
-  line-height: 1.56;
+  line-height: (28px / 18px);
+  //156%
   background-color: var(--project-overlay);
+
   opacity: 0;
 
   transform: translateY(100%);
@@ -113,3 +117,181 @@
   letter-spacing: 0.06em;
   margin-bottom: 4px;
 }
+
+@media screen and (min-width: 768px) {
+  .filter {
+    flex-wrap: unset;
+    justify-content: center;
+    margin-bottom: 30px;
+
+    margin-top: unset;
+    margin-left: unset;
+  }
+
+  .filter__item {
+    margin-top: unset;
+    margin-left: unset;
+  }
+
+  .project-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+  }
+
+  .filter__item:not(:last-child) {
+    margin-right: 8px;
+  }
+
+  .project__item {
+    margin-top: 30px;
+    margin-left: 30px;
+    flex-basis: calc((100% - 60px) / 2);
+    margin-bottom: unset;
+  }
+
+  .project__item:first-child .project__link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .project__body {
+    flex-grow: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filter {
+    margin-bottom: 50px;
+  }
+
+  .project__item {
+    flex-basis: calc((100% - 90px) / 3);
+  }
+}
+
+// .portfolio {
+//   font-size: 16px;
+//   line-height: (30px / 16px);
+//   // 187%
+// }
+
+// .filter {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   margin-bottom: 50px;
+// }
+
+// .filter__item:not(:last-child) {
+//   margin-right: 8px;
+// }
+
+// .filter__button {
+//   padding: 6px 22px;
+
+//   font-family: inherit;
+//   font-weight: 500;
+//   font-size: inherit;
+//   line-height: (26px / 16px);
+//   //162%
+//   letter-spacing: inherit;
+//   text-align: center;
+
+//   color: var(--title-color);
+//   background-color: var(--secondary-background);
+//   border: none;
+//   border-radius: 4px;
+//   cursor: pointer;
+
+//   transition: color var(--trans-duration) var(--timing-function),
+//     background-color var(--trans-duration) var(--timing-function),
+//     box-shadow var(--trans-duration) var(--timing-function);
+// }
+
+// .filter__button:active,
+// .filter__button:hover,
+// .filter__button:focus {
+//   color: var(--text-secondary-color);
+//   background-color: var(--brand-color);
+//   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//     0px 2px 2px rgba(0, 0, 0, 0.12);
+// }
+
+// .project-list {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-top: -30px;
+//   margin-left: -30px;
+// }
+
+// .project__item {
+//   margin-top: 30px;
+//   margin-left: 30px;
+//   flex-basis: calc((100% - 90px) / 3);
+// }
+
+// .project__link {
+//   display: block;
+//   color: inherit;
+
+//   transition: box-shadow var(--trans-duration) var(--timing-function);
+// }
+
+// .project__link:hover,
+// .project__link:focus {
+//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//     1px 4px 6px rgba(0, 0, 0, 0.16);
+// }
+
+// .project__header {
+//   position: relative;
+//   overflow: hidden;
+// }
+
+// .project__overlay {
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   overflow: auto;
+//   padding: 63px 24px;
+
+//   height: 100%;
+//   width: 100%;
+
+//   font-size: 18px;
+//   line-height: (28px / 18px);
+//   //156%
+//   background-color: var(--project-overlay);
+
+//   opacity: 0;
+
+//   transform: translateY(100%);
+//   transition: transform var(--trans-duration) var(--timing-function),
+//     opacity var(--trans-duration) var(--timing-function);
+// }
+
+// .project__link:hover .project__overlay,
+// .project__link:focus .project__overlay {
+//   transform: translateY(0%);
+//   opacity: 1;
+// }
+
+// .project__desc {
+//   color: var(--text-secondary-color);
+// }
+
+// .project__body {
+//   padding: 20px 24px;
+//   border: 1px solid var(--project-border);
+//   border-top: none;
+// }
+
+// .project__title {
+//   font-size: 18px;
+//   line-height: 2;
+//   letter-spacing: 0.06em;
+//   margin-bottom: 4px;
+// }
